# diffy

./: CMakeLists.txt  README.TXT  custom.spec  diffy_ignores  packaging.cmake
include/: MD5.h
source/: MD5.cpp  Main.cpp
